[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.15"
clap = { version = "4.5.15", features = ["derive"] }
criterion = "0.5.1"
crossbeam-utils = "0.8.20"
env_logger = "0.11.5"
log = "0.4.22"
predicates = "3.1.2"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
sled = "0.34.7"
tempfile = "3.10.1"
thiserror = "1.0.63"
walkdir = "2.5.0"

[[bench]]
name = "engine_bench"
harness = false
